2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/19_asmParamBool.deca
// Description:
//    Programme : utilisation de asm qui prend en paramétre un boolean
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 16/01/2024
class A {
    
    void get(boolean x) asm (
        "hello "
    );

}