2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/31_MethodParamString.deca
// Description:
//    Programme utilisation de string comme paramétre
// Resultats:
//      Programme incorrecte syntaxiquement : 9:13: extraneous input '"hello"' expecting ')'
// Historique:
//    cree le 18/01/2023
class A {
    int x;
    void get("hello")
    {
        return x;
    }
}